codepkg/objects/Program_Template_Page__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Layout_Config__c</fullName>
        <label>Page Layout Config</label>
        <referenceTo>Page_Layout__mdt</referenceTo>
        <relationshipLabel>Program Template Pages</relationshipLabel>
        <relationshipName>Program_Template_Pages</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Page_Previous_Next_Button__c</fullName>
        <label>Page Previous Next Button</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Page</fullName>
                    <default>true</default>
                    <label>First Page</label>
                </value>
                <value>
                    <fullName>Last Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Template__c</fullName>
        <label>Program Template</label>
        <referenceTo>Program_Template__mdt</referenceTo>
        <relationshipLabel>Program Template Pages</relationshipLabel>
        <relationshipName>Program_Template_Pages</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Render_Criteria_FieldAPI_Name_1_Operator__c</fullName>
        <label>Render Criteria FieldAPI Name 1 Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal</fullName>
                    <default>true</default>
                    <label>Equal</label>
                </value>
                <value>
                    <fullName>Not Equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Render_Criteria_FieldAPI_Name_2_Operator__c</fullName>
        <label>Render Criteria FieldAPI Name 2 Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal</fullName>
                    <default>true</default>
                    <label>Equal</label>
                </value>
                <value>
                    <fullName>Not Equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Render_Criteria_Field_API_Name_1_Value__c</fullName>
        <label>Render Criteria Field API Name 1 Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Render_Criteria_Field_API_Name_1__c</fullName>
        <label>Render Criteria Field API Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Render_Criteria_Field_API_Name_2_Value__c</fullName>
        <label>Render Criteria Field API Name 2 Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Render_Criteria_Field_API_Name_2__c</fullName>
        <label>Render Criteria Field API Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Confirmation_Message__c</fullName>
        <label>Submit Confirmation Message</label>
        <type>TextArea</type>
    </fields>
    <label>Program Template Page</label>
    <listViews>
        <fullName>All_Page_Template_Pages</fullName>
        <columns>MasterLabel</columns>
        <columns>Program_Template__c</columns>
        <columns>DeveloperName</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Page Template Pages</label>
    </listViews>
    <pluralLabel>Program Template Pages</pluralLabel>
</CustomObject>